--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,6 +41,10 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:25.3.1'
 
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+
+    implementation 'com.google.firebase:firebase-messaging'
+
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     implementation 'com.twilio:voice-android:5.6.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
