--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -4,5 +4,11 @@
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-
+    <application android:enabled="true">
+        <service android:exported="false" android:name=".fcm.MessagingService" android:enabled="true" >
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+    </application>
 </manifest>
