--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.1.2'
 
     }
 }
@@ -40,6 +40,11 @@ android {
 
 dependencies {
     api 'com.android.support:support-v4:28.0.0'
+
+    implementation platform("com.google.firebase:firebase-bom:26.7.0")
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-messaging-directboot:20.2.0'
+
 
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     implementation 'com.twilio:voice-android:5.6.0'
