--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: twilio_programmable_voice
 description: Non-official Flutter Twilio API for Twilio Programmable Voice Resource
 version: 0.0.1
-author: 'izio38'
-homepage: 'https://github.com/izio38/'
+author: "izio38"
+homepage: "https://github.com/izio38/"
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
-  flutter: '>=1.20.0'
+  sdk: ">=2.7.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
@@ -15,14 +15,14 @@ dependencies:
   soundpool: ^1.1.3
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
-  background_fetch: '^0.7.1'
+  background_fetch: "^0.7.1"
   # workmanager:
   #   git:
   #     url: git://github.com/Pierre-Monier/flutter_workmanager.git
   #     ref: workmanager-factory
   jwt_decoder: ^1.0.3
   # firebase_messaging: 7.0.3
-  flutter_apns: ^1.4.1
+  # flutter_apns: ^1.4.1
   dio: ^3.0.10
   meta: ^1.2.4
   uuid: ^2.2.2
@@ -48,4 +48,3 @@ flutter:
     - packages/twilio_programmable_voice/assets/sounds/disconnect.wav
     - packages/twilio_programmable_voice/assets/sounds/incoming.wav
     - packages/twilio_programmable_voice/assets/sounds/outgoing.wav
-
