--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,11 +43,10 @@ dependencies {
 
     implementation platform("com.google.firebase:firebase-bom:26.7.0")
     implementation 'com.google.firebase:firebase-messaging'
-    implementation 'com.google.firebase:firebase-messaging-directboot:20.2.0'
-
 
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     implementation 'com.twilio:voice-android:5.6.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.lifecycle:lifecycle-process:2.3.0'
 }
