--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -3,8 +3,19 @@
     package="fr.izio.twilio_programmable_voice">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application>
+        <service
+            android:enabled="true"
+            android:name=".IncomingCallNotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="ACTION_ACCEPT" />
+                <action android:name="ACTION_REJECT" />
+            </intent-filter>
+        </service>
+
         <service
             android:name=".TwilioFirebaseMessagingService"
             android:exported="false">
@@ -13,5 +24,4 @@
             </intent-filter>
         </service>
     </application>
-
 </manifest>
